# steam-hunter

./: .env.example  .gitignore  README.md  docker-compose.full.yml  docker-compose.yml  fgc-docker-compose.yml  start.sh  test_parser.py
.github/workflows/: deploy.yml
asf-config/: ASF.crash
asf-config/config/: ASF.json  IPC.config  principal.json  secundaria1.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: c065c2332dd2_initial.py
backend/app/: asf_client.py  auto_enter.py  constants.py  database.py  main.py  mcp_server.py  notifications.py  parser.py  redeemer.py  scheduler.py  validator.py
backend/app/scrapers/: base_scraper.py  giveaway_apis.py  gog.py  keysites.py  moresources.py  reddit.py  steam_store.py  steamdb.py  steamgifts.py  telegram_scraper.py  twitter.py  xbox.py  xbox_catalog.py
backend/scripts/: refresh_xbox_cookies.py
backend/tests/: conftest.py  test_asf_client.py  test_main.py  test_scheduler.py  test_validator.py
fgc-data/browser/: addonStartup.json.lz4  bounce-tracking-protection.sqlite  compatibility.ini  content-prefs.sqlite  cookies.sqlite  cookies.sqlite-wal  domain_to_categories.sqlite  extensions.json  favicons.sqlite-wal  permissions.sqlite  pkcs11.txt  places.sqlite-wal  prefs-1.js  prefs-10.js  prefs-11.js  prefs-12.js  prefs-13.js  prefs-14.js  prefs-15.js  prefs-16.js  prefs-17.js  prefs-18.js  prefs-19.js  prefs-2.js  prefs-20.js  prefs-21.js  (+32 more)
frontend/: index.html  nginx.conf  tsconfig.node.json
scripts/: deploy-vps.sh
(+1265 files in other folders)
